# vivoe-lite

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  customdoxygen.css  debug.h  logGva.cpp  main.cpp  makefile  pngget.h  renderer.h  rendererCairo.cpp  rendererCairo.h  rendererGva.cpp  rendererGva.h  rendererSdl.cpp  rendererSdl.h  screenGva.cpp  screenGva.h  update.sh  version
.github/: FUNDING.yml
dds/: CMakeLists.txt
dds/location/: CMakeLists.txt  generate.sh  location.cxx  location.h  location.idl  locationPubSubTypes.cxx  locationPubSubTypes.h  locationPublisher.cxx  locationPublisher.h  locationSubscriber.cxx  locationSubscriber.h
docs/: BEZEL.md  CONFIG.md  DEVELOPER.md  PIPELINE.md  WINDOWS.md  index.html  vivoe-lite.css
gva-tools/: CMakeLists.txt  README.md  config.xml  gva-display.cc  gva-display.h  gva-tool.cc  gva-tool.cpp
hmi-display/: CMakeLists.txt  config.proto  config_reader.cc  config_reader.h  debug.cc  debug.cpp  debug.h  debug.hpp  eventsGva.cpp  eventsGva.h  eventsGva.hpp  events_gva.cc  events_gva.h  gva-tool.cpp  gva.h  gva.hpp  hmiGva.cpp  hmiGva.h  hmiGva.hpp  hmi_gva.cc  hmi_gva.h  hmi_gva_helpers.cc  hmi_gva_helpers.h  logGva.h  main.cc  main.cpp  pngget.cpp  renderer.cc  renderer.h  renderer.hpp  rendererCairo.cpp  rendererCairo.h  rendererCairo.hpp  rendererGva.cpp  rendererGva.h  rendererGva.hpp  rendererSdl.cpp  rendererSdl.hpp  renderer_cairo.cc  renderer_cairo.h  (+18 more)
hmi-display/common/: CMakeLists.txt  debug.cpp  logGva.cpp  log_gva.cc  log_gva.h  pngget.h
hmi-display/tools/: CMakeLists.txt  gva-tool.cpp
images/: README.md
scripts/: dumprtp.sh  dumpsap.sh  dumpsnmp.sh
scripts/gstreamer-0.10/: README.txt  config.sh  getipaddr.sh  gst-rtp-rebuild.sh  gstreamer0.10_catchstream.sh  gstreamer0.10_playimage_x.sh  gstreamer0.10_playimage_x_all.sh  gstreamer0.10_playstream.sh  gstreamer0.10_playstream_all.sh  gstreamer0.10_playstream_x.sh
scripts/gstreamer-1.0/: config.sh  getipaddr.sh  gstreamer1.0_playimage_x.sh  hmi-live-01.sh  hmi-live-02.sh  hmi.sh
test/: test_events.cc  test_events.cpp  test_hmi.cc  test_hmi.cpp  test_log.cc  test_log.cpp
video/: CMakeLists.txt  gvaVideo.cpp  gvaVideo.h  gvaVideoRtpYuv.cpp  gvaVideoRtpYuv.h  gvaVideoRtpYuv.hpp  gva_video.cc  gva_video.h  gva_video_rtp_yuv.cc  gva_video_rtp_yuv.h
