include(FindPkgConfig)
project(hmi-display)
cmake_minimum_required(VERSION 2.8)

if(ENABLE_COVERAGE)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g ")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fprofile-arcs")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ftest-coverage")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} --coverage")
endif()

include_directories(../rtp-payloader)
include_directories(../video)
include_directories(../nmealib/include)
include_directories(./video)
include_directories(${CMAKE_BINARY_DIR}/external/rtp-payloader)
include_directories(${CMAKE_BINARY_DIR}/external/libosmscout/libosmscout/include)
include_directories(${CMAKE_BINARY_DIR}/external/libosmscout/libosmscout-map/include)
include_directories(${CMAKE_BINARY_DIR}/libosmscout/libosmscout-map-cairo/include)
include_directories(${PROJECT_SOURCE_DIR}/../libosmscout/libosmscout/include)
include_directories(${PROJECT_SOURCE_DIR}/../libosmscout/libosmscout-map/include)
include_directories(${PROJECT_SOURCE_DIR}/../libosmscout/libosmscout-map-cairo/include)
link_directories(${CMAKE_BINARY_DIR}/external/libosmscout/libosmscout-map-cairo)
link_directories(${CMAKE_BINARY_DIR}/external/libosmscout/libosmscout)
link_directories(${CMAKE_BINARY_DIR}/external/libosmscout/libosmscout-map)

add_executable(hmi-display main.cc renderer_sdl.cc renderer_cairo.cc renderer_gva.cc screen_gva.cc events_gva.cc ./common/debug.cc ./common/log_gva.cc hmi_gva.cc view_gva.cc renderer_map.cc)
#add_subdirectory(dds)
#add_subdirectory(display)
include_directories ()
#find_package (GeographicLib 1.34 REQUIRED)
#target_link_libraries (hmi-display ${GeographicLib_LIBRARIES})

target_link_libraries (hmi-display Geographic osmscout osmscout_map osmscout_map_cairo)

add_subdirectory(common)
#set (CMAKE_CXX_FLAGS " -std=c++14 -O2 -fno-exceptions -Wall -Wextra -Werror -pedantic -pedantic-errors ")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -w -std=c++11")
pkg_check_modules(CAIRO REQUIRED cairo)
pkg_check_modules(SWSCALE REQUIRED libswscale)
target_link_libraries(hmi-display SDL2 X11 png pthread hmi-video rtp-payloader nmealib dds)
target_link_libraries(hmi-display ${CAIRO_LIBRARIES} ${SWSCALE_LIBRARIES})
target_include_directories(hmi-display PUBLIC ${CAIRO_INCLUDE_DIRS} ${SWSCALE_INCLUDE_DIRS} common dds dds/location display)
target_compile_options(hmi-display PUBLIC ${CAIRO_CFLAGS_OTHER})
install(TARGETS hmi-display DESTINATION bin)
